Fix web worker and updates contacts link

--- a/src/index.html
+++ b/src/index.html
@@ -15,5 +15,6 @@
     <noscript>
       Please enable JavaScript to continue using this application.
     </noscript>
+    <web-worker></web-worker>
   </body>
 </html>
