Add CSP meta header

--- a/src/index.html
+++ b/src/index.html
@@ -9,6 +9,7 @@
     <link rel="apple-touch-icon" href="assets/icons/apple-touch-icon.png" />
     <link rel="manifest" href="manifest.webmanifest" />
     <meta name="theme-color" content="#444" />
+    <meta http-equiv="Content-Security-Policy" content="default-src 'self'" />
   </head>
   <body class="dark" style="background-color: #333">
     <app-root></app-root>
