--- a/src/index.html
+++ b/src/index.html
@@ -11,6 +11,15 @@
     <link rel="manifest" href="manifest.webmanifest" />
     <meta name="theme-color" content="#444" />
     <meta http-equiv="Content-Security-Policy" content="default-src 'self'" />
+    <meta
+      name="description"
+      content="This is my personal website for portofolio showcase built by Angular, Tailwind, NgRx, and Scully"
+    />
+    <meta
+      name="keywords"
+      content="chavyv, akvar, chavyv akvar, habibullah akbar, habib akbar, software engineer, web developer, frontend developer, javascript developer, indonesia"
+    />
+    <meta name="author" content="Habibullah Akbar" />
   </head>
   <body class="dark" style="background-color: #333">
     <app-root></app-root>
