--- a/src/index.html
+++ b/src/index.html
@@ -3,7 +3,11 @@
   <head>
     <meta charset="utf-8" />
     <title>Chavyv Web</title>
+    <base href="/" />
     <structure-data></structure-data>
+    <link rel="icon" type="image/x-icon" href="favicon.ico" />
+    <link rel="apple-touch-icon" href="assets/icons/apple-touch-icon.png" />
+    <link rel="manifest" href="manifest.webmanifest" />
   </head>
   <body class="dark" style="background-color: #333">
     <app-root></app-root>
