--- a/src/index.html
+++ b/src/index.html
@@ -4,10 +4,11 @@
     <meta charset="utf-8" />
     <title>Chavyv Web</title>
     <base href="/" />
-    <structure-data></structure-data>
     <link rel="icon" type="image/x-icon" href="favicon.ico" />
     <link rel="apple-touch-icon" href="assets/icons/apple-touch-icon.png" />
     <link rel="manifest" href="manifest.webmanifest" />
+    <meta http-equiv="Content-Security-Policy" content="default-src 'self'" />
+    <structure-data></structure-data>
   </head>
   <body class="dark" style="background-color: #333">
     <app-root></app-root>
