Fix meta tag injection

--- a/src/index.html
+++ b/src/index.html
@@ -7,8 +7,8 @@
     <link rel="icon" type="image/x-icon" href="favicon.ico" />
     <link rel="apple-touch-icon" href="assets/icons/apple-touch-icon.png" />
     <link rel="manifest" href="manifest.webmanifest" />
-    <meta http-equiv="Content-Security-Policy" content="default-src 'self'" />
-    <structure-data></structure-data>
+    <meta name="csp"/>
+    <meta name="structured-data"></meta>
   </head>
   <body class="dark" style="background-color: #333">
     <app-root></app-root>
